<resources>
    <string name="app_name">Emotions</string>
    <string name="swipe_left_for_register">Links swipen für Registierung</string>
    <string name="login">Login</string>
    <string name="password">Passwort</string>
    <string name="e_mail">Email</string>
    <string name="tag">Share your Emotions. On The Go.</string>
    <string name="swipe_right_for_login">Rechts swipen für Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Passwort Bestätigen</string>
    <string name="your_name">Name</string>
    <string name="access_token">Access Token</string>
    <string name="user_data">User Data</string>
    <string name="resetPW">Passwort zurücksetzen</string>
    <string name="resetPWTitle">Passwort zurücksetzen</string>

    <string name="errorEmpty">Feld darf nicht leer sein</string>
    <string name="ServerIP">http://192.168.1.60:80</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_setting">Settings</string>
    <string name="action_settings">settings</string>
</resources>
